--- a/index.html
+++ b/index.html
@@ -3,101 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="My Portfolio - Showcasing my work and projects">
+    <meta name="description" content="My Portfolio">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="container">
-                <h1 class="logo">My Portfolio</h1>
-                <ul class="nav-links">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
 
-    <main>
-        <section id="hero">
-            <div class="container">
-                <h2>Hi, I'm [Your Name]</h2>
-                <p class="subtitle">Developer | Designer | Creator</p>
-                <a href="#projects" class="cta-button">View My Work</a>
-            </div>
-        </section>
-
-        <section id="about">
-            <div class="container">
-                <h2>About Me</h2>
-                <p>I'm a passionate developer with experience in building web applications and solving complex problems. I love creating elegant solutions and learning new technologies.</p>
-            </div>
-        </section>
-
-        <section id="projects">
-            <div class="container">
-                <h2>Projects</h2>
-                <div class="projects-grid">
-                    <div class="project-card">
-                        <h3>Project One</h3>
-                        <p>Description of your first project. What technologies did you use? What problem did it solve?</p>
-                        <a href="#" class="project-link">View Project →</a>
-                    </div>
-                    <div class="project-card">
-                        <h3>Project Two</h3>
-                        <p>Description of your second project. Highlight the key features and your role in the project.</p>
-                        <a href="#" class="project-link">View Project →</a>
-                    </div>
-                    <div class="project-card">
-                        <h3>Project Three</h3>
-                        <p>Description of your third project. What makes this project special or unique?</p>
-                        <a href="#" class="project-link">View Project →</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="skills">
-            <div class="container">
-                <h2>Skills</h2>
-                <div class="skills-grid">
-                    <div class="skill-item">
-                        <h3>Frontend</h3>
-                        <p>HTML, CSS, JavaScript, React</p>
-                    </div>
-                    <div class="skill-item">
-                        <h3>Backend</h3>
-                        <p>Node.js, Python, Databases</p>
-                    </div>
-                    <div class="skill-item">
-                        <h3>Tools</h3>
-                        <p>Git, VS Code, Docker</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="contact">
-            <div class="container">
-                <h2>Get In Touch</h2>
-                <p>I'm always interested in hearing about new projects and opportunities.</p>
-                <div class="contact-links">
-                    <a href="mailto:your.email@example.com">Email</a>
-                    <a href="https://github.com/yourusername" target="_blank">GitHub</a>
-                    <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 My Portfolio. All rights reserved.</p>
-        </div>
-    </footer>
 </body>
 </html>
