bottom decrative wave

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 <body>
     <div class="decorative-dots top-right"></div>
     <div class="decorative-dots bottom-left"></div>
+    <div class="decorative-wave"></div>
     
-
-
     <main class="hero-section">
         <div class="container">
             <div class="hero-content">
@@ -116,6 +115,7 @@
                 </article>
             </div>
         </div>
+        
     </section>
 
 </body>
