add scroll button

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/utils/decorative.css">
     <link rel="stylesheet" href="css/utils/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <script src="js/main.js" defer></script>
 </head>
 <body>
     <div class="decorative-dots top-right"></div>
@@ -49,9 +50,16 @@
                 </div>
             </div>
         </div>
+        
+        <a href="#projects" class="scroll-down">
+            <div class="scroll-arrows">
+                <i class="fas fa-angle-double-down"></i>
+            </div>
+            <img src="img/cute-cat-paw-by-Vexels.png" alt="Scroll Down" class="paw-icon">
+        </a>
     </main>
 
-    <section class="articles-section">
+    <section class="articles-section" id="projects">
         <div class="container">
             <div class="section-header">
                 <h2>What I have been working on</h2>
