add tap hint for mobile user

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <div class="decorative-dots top-right"></div>
+    <div class="mobile-tap-hint">tap for cat paw!</div>
     
     <main class="hero-section">
         <div class="container">
