--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <img src="img\twitch_bot_chat.PNG" alt="Article 1">
                     </div>
                     <div class="article-content">
-                        <h3>"smobotat" - LLM Powered<br>Twitch Roast Bot</h3>
+                        <h3>Twitch Roast Bot with Zero-Shot Classification,<br>RAG & Multi-Model NLP Pipeline</h3>
                         <p class="article-date">28 Nov 2025</p>
                         <a href="https://github.com/eszter-pai/twitch-roaster/blob/main/README.md" target="_blank" class="read-more">Read More</a>
                     </div>
