--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="article-content">
                         <h3>DnD Inspired Text Game<br>for Evaluating LLMs</h3>
                         <p class="article-date">24 Jan 2025</p>
-                        <a href="#" class="read-more">Read More</a>
+                        <a href="https://github.com/eszter-pai/clembench/tree/main/games/dnd" target="_blank" class="read-more">Read More</a>
                     </div>
                 </article>
             </div>
