article format changes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="css/utils/decorative.css">
     <link rel="stylesheet" href="css/utils/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="js/main.js" defer></script>
 </head>
 <body>
@@ -74,34 +77,62 @@
             <div class="articles-grid">
                 <article class="article-card">
                     <div class="article-image">
-                        <img src="img\twitch_bot_chat.PNG" alt="Article 1">
+                        <img src="img\twitch_bot_chat.PNG" alt="Twitch Roast Bot">
                     </div>
                     <div class="article-content">
-                        <h3>Twitch Roast Bot with Zero-Shot Classification,<br>RAG & Multi-Model NLP Pipeline</h3>
-                        <p class="article-date">28 Nov 2025</p>
-                        <a href="https://github.com/eszter-pai/twitch-roaster/blob/main/README.md" target="_blank" class="read-more" data-en="Read More" data-de="Mehr Lesen">Read More</a>
+                        <h3>Twitch Roast Bot with Zero-Shot Classification, RAG & Multi-Model NLP Pipeline</h3>
+                        <p class="article-description">An intelligent Twitch chatbot that generates context-aware roasts using zero-shot classification, retrieval-augmented generation (RAG), and a multi-model NLP pipeline. Tracks user behavior and chat history in SQLite to deliver personalized, humorous responses that call out problematic content like racism and sexism</p>
+                        <div class="tech-tags">
+                            <span class="tech-tag">LLM</span>
+                            <span class="tech-tag">Zero-Shot</span>
+                            <span class="tech-tag">RAG</span>
+                            <span class="tech-tag">ChromaDB</span>
+                            <span class="tech-tag">NLP</span>
+                            <span class="tech-tag">Twitch API</span>
+                            <span class="tech-tag">Transformers</span>
+                            <span class="tech-tag">SQLite</span>
+                        </div>
+                        <a href="https://github.com/eszter-pai/twitch-roaster/blob/main/README.md" target="_blank" class="read-more" data-en="GitHub" data-de="GitHub">Read More</a>
                     </div>
                 </article>
 
                 <article class="article-card">
                     <div class="article-image">
-                        <img src="img\master_thesis_thumbnail.PNG" alt="Article 2">
+                        <img src="img\master_thesis_thumbnail.PNG" alt="Master Thesis">
                     </div>
                     <div class="article-content">
-                        <h3>LLM Judge & Feedback Loop<br>For Traffic Scene Generation</h3>
-                        <p class="article-date">21 Oct 2025</p>
+                        <h3>LLM Judge & Feedback Loop For Traffic Scene Generation</h3>
+                        <p class="article-description">A modular framework that orchestrates multiple LLM agents to generate polished traffic scenarios. Demonstrates how smaller open-source LLMs can serve as effective judges in automated feedback loops, improving retrieval performance and scenario diversity for autonomous vehicle testing.</p>
+                        <div class="tech-tags">
+                            <span class="tech-tag">LLMs</span>
+                            <span class="tech-tag">CARLA</span>
+                            <span class="tech-tag">Multi-Agent</span>
+                            <span class="tech-tag">Autonomous Vehicles</span>
+                            <span class="tech-tag">Prompt Engineering</span>
+                            <span class="tech-tag">Feedback Loop</span>
+                            <span class="tech-tag">Transformers</span>
+                            <span class="tech-tag">Pytorch</span>
+                        </div>
                         <a href="master-thesis.html" class="read-more" data-en="Read More" data-de="Mehr Lesen">Read More</a>
                     </div>
                 </article>
 
                 <article class="article-card">
                     <div class="article-image">
-                        <img src="img\bots_dnd.png" alt="Article 3">
+                        <img src="img\bots_dnd.png" alt="DnD Game">
                     </div>
                     <div class="article-content">
-                        <h3>DnD Inspired Text Game<br>for Evaluating LLMs</h3>
-                        <p class="article-date">24 Jan 2025</p>
-                        <a href="https://github.com/eszter-pai/clembench/blob/main/games/dnd/README.md" target="_blank" class="read-more" data-en="Read More" data-de="Mehr Lesen">Read More</a>
+                        <h3>DnD Inspired Text Game for Evaluating LLMs</h3>
+                        <p class="article-description">An interactive Dungeons & Dragons-style text game designed to evaluate large language models' conversational abilities, creative reasoning, and decision-making in complex narrative scenarios. Provides a standardized framework for assessing LLM performance in role-playing contexts.</p>
+                        <div class="tech-tags">
+                            <span class="tech-tag">Prompt Engineering</span>
+                            <span class="tech-tag">API</span>
+                            <span class="tech-tag">LLM Evaluation</span>
+                            <span class="tech-tag">Game Design</span>
+                            <span class="tech-tag">NLP</span>
+                            <span class="tech-tag">Benchmarking</span>
+                        </div>
+                        <a href="https://github.com/eszter-pai/clembench/blob/main/games/dnd/README.md" target="_blank" class="read-more" data-en="GitHub" data-de="GitHub">GitHub</a>
                     </div>
                 </article>
             </div>
