--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
             
             <div class="articles-grid">
-                <article class="article-card">
+                <article class="article-card featured">
                     <div class="article-image">
                         <img src="img\twitch_bot_chat.PNG" alt="Twitch Roast Bot">
                     </div>
@@ -84,6 +84,8 @@
                         <p class="article-description">An intelligent Twitch chatbot that generates context-aware roasts using zero-shot classification, retrieval-augmented generation (RAG), and a multi-model NLP pipeline. Tracks user behavior and chat history in SQLite to deliver personalized, humorous responses that call out problematic content like racism and sexism</p>
                         <div class="tech-tags">
                             <span class="tech-tag">LLM</span>
+                            <span class="tech-tag">DeepSeek</span>
+                            <span class="tech-tag">Ollama</span>
                             <span class="tech-tag">Zero-Shot</span>
                             <span class="tech-tag">RAG</span>
                             <span class="tech-tag">ChromaDB</span>
@@ -126,6 +128,7 @@
                         <p class="article-description">An interactive Dungeons & Dragons-style text game designed to evaluate large language models' conversational abilities, creative reasoning, and decision-making in complex narrative scenarios. Provides a standardized framework for assessing LLM performance in role-playing contexts.</p>
                         <div class="tech-tags">
                             <span class="tech-tag">Prompt Engineering</span>
+                            <span class="tech-tag">Regex</span>
                             <span class="tech-tag">API</span>
                             <span class="tech-tag">LLM Evaluation</span>
                             <span class="tech-tag">Game Design</span>
