--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <!DOCTYPE html>
+<!--
+        ／＞　 フ
+        | 　_　_| ayo this is Eszter's hideout
+      ／` ミ＿xノ 
+     /　　　　 |
+    /　 ヽ　　 ﾉ
+    │　　|　|　|
+／￣|　　 |　|　|
+(￣ヽ＿_ヽ_)__)
+＼二)
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
