--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                             <span class="tech-tag">Twitch API</span>
                             <span class="tech-tag">Transformers</span>
                             <span class="tech-tag">SQLite</span>
+                            <span class="tech-tag">BERT</span>
                         </div>
                         <a href="https://github.com/eszter-pai/twitch-roaster/blob/main/README.md" target="_blank" class="read-more" data-en="GitHub" data-de="GitHub">Read More</a>
                     </div>
