--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
                             <span class="tech-tag">Feedback Loop</span>
                             <span class="tech-tag">Transformers</span>
                             <span class="tech-tag">Pytorch</span>
+                            <span class="tech-tag">Docker</span>
+                            <span class="tech-tag">HPC</span>
                         </div>
                         <a href="master-thesis.html" class="read-more" data-en="Read More" data-de="Mehr Lesen">Read More</a>
                     </div>
