new blog post script

--- a/index.html
+++ b/index.html
@@ -162,6 +162,27 @@
                         <a href="https://github.com/eszter-pai/clembench/blob/main/games/dnd/README.md" target="_blank" class="read-more" data-en="GitHub" data-de="GitHub">GitHub</a>
                     </div>
                 </article>
+
+                <article class="article-card">
+                    <div class="article-image">
+                        <img src="img\cocobot_finetune.PNG" alt="COCOBOTS Fine-Tuning">
+                    </div>
+                    <div class="article-content">
+                        <h3>Fine-Tuning LLM for Higher-Order Code Generation</h3>
+                        <p class="article-description">LLM fine-tuning for code generation in the COCOBOTS domain. Using LoRA techniques, this work addresses common LLM code generation issues by training models to generate higher-order instructions for placing objects, demonstrating the gap between first-order and higher-order code reasoning.</p>
+                        <div class="tech-tags">
+                            <span class="tech-tag">LLM Fine-Tuning</span>
+                            <span class="tech-tag">LoRA</span>
+                            <span class="tech-tag">PEFT</span>
+                            <span class="tech-tag">Unsloth</span>
+                            <span class="tech-tag">Code Generation</span>
+                            <span class="tech-tag">PyTorch</span>
+                            <span class="tech-tag">Transformers</span>
+                            <span class="tech-tag">NLP Research</span>
+                        </div>
+                        <a href="cocobots-finetuning.html" class="read-more" data-en="Read More" data-de="Mehr Lesen">Read More</a>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
