--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="hero-content">
                 <div class="character-wrapper">
                     <div class="pink-circle">
-                        <img src="img/pic.png" alt="Eszter's Profile" class="profile-image">
+                        <img src="img/profile_pic.jpeg" alt="Eszter's Profile" class="profile-image">
                     </div>
                 </div>
 
